Update Gradle properties for faster build times